<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/backimage"

    tools:context=".RedeemActivity"
    android:id="@+id/layout_redeem">
    
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/banner_alt"
        android:gravity="top"
        android:src="@drawable/top_base" />

     <GridLayout
         android:id="@+id/number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/footer"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="50dp"
         android:columnCount="3"
         android:orientation="horizontal" >

         <Button android:id="@+id/b1"
                 android:text="@string/b1" 
                 android:textColor="#ffffff"
                 android:textSize="32sp"
                 android:background="@drawable/custombutton2"
                 android:layout_width="110dp"
                 android:layout_height="85dp"
                 android:shadowColor="#000"
                 android:shadowDx="-2"
                 android:shadowDy="4"
                 android:shadowRadius="7"/>
         <Button android:id="@+id/b2"
                 android:text="@string/b2"
                 android:textColor="#ffffff"
                 android:textSize="32sp"
                 android:layout_width="110dp"
                 android:layout_height="85dp"
                 android:background="@drawable/custombutton2"
                 android:shadowColor="#000"
                 android:shadowDx="-2"
                 android:shadowDy="4"
                 android:shadowRadius="7"/>
         <Button android:id="@+id/b3"
                 android:text="@string/b3" 
                 android:textColor="#ffffff"
                 android:textSize="32sp"
                 android:layout_width="110dp"
                 android:layout_height="85dp"
                 android:background="@drawable/custombutton2"
                 android:shadowColor="#000"
                 android:shadowDx="-2"
                 android:shadowDy="4"
                 android:shadowRadius="7"/>
         <Button android:id="@+id/b4"
                 android:text="@string/b4"
                 android:textColor="#ffffff"
                 android:textSize="32sp"
                 android:layout_width="110dp"
                 android:layout_height="85dp"
                 android:background="@drawable/custombutton2" 
                 android:shadowColor="#000"
                 android:shadowDx="-2"
                 android:shadowDy="4"
                 android:shadowRadius="7"/>
         <Button android:id="@+id/b5"
                 android:text="@string/b5"
                 android:textColor="#ffffff"
                 android:textSize="32sp"
                 android:layout_width="110dp"
                 android:layout_height="85dp"
                 android:background="@drawable/custombutton2"
                 android:shadowColor="#000"
                 android:shadowDx="-2"
                 android:shadowDy="4"
                 android:shadowRadius="7" />
         <Button android:id="@+id/b6"
                 android:text="@string/b6"
                 android:textColor="#ffffff"
                 android:textSize="32sp"
                 android:layout_width="110dp"
                 android:layout_height="85dp"
                 android:background="@drawable/custombutton2" 
                 android:shadowColor="#000"
                 android:shadowDx="-2"
                 android:shadowDy="4"
                 android:shadowRadius="7"/>
         <Button android:id="@+id/b7"
                 android:text="@string/b7"
                 android:textColor="#ffffff"
                 android:textSize="32sp"
                 android:layout_width="110dp"
                 android:layout_height="85dp"
                 android:background="@drawable/custombutton2"
                 android:shadowColor="#000"
                 android:shadowDx="-2"
                 android:shadowDy="4"
                 android:shadowRadius="7"/>
         <Button android:id="@+id/b8"
                 android:text="@string/b8"
                 android:textColor="#ffffff"
                 android:textSize="32sp"
                 android:layout_width="110dp"
                 android:layout_height="85dp"
                 android:background="@drawable/custombutton2"
                 android:shadowColor="#000"
                 android:shadowDx="-2"
                 android:shadowDy="4"
                 android:shadowRadius="7" />
         <Button android:id="@+id/b9"
                 android:text="@string/b9"
                 android:textColor="#ffffff"
                 android:textSize="32sp"
                 android:layout_width="110dp"
                 android:layout_height="85dp"
                 android:background="@drawable/custombutton2"
                 android:shadowColor="#000"
                 android:shadowDx="-2"
                 android:shadowDy="4"
                 android:shadowRadius="7" />
         <Button android:id="@+id/clear"
                 android:text="@string/clear"
                 android:textColor="#ffffff"
                 android:textSize="32sp"
                 android:layout_width="110dp"
                 android:layout_height="85dp"
                 android:background="@drawable/custombutton2" 
                 android:shadowColor="#000"
                 android:shadowDx="-2"
                 android:shadowDy="4"
                 android:shadowRadius="7"/>
         <Button android:id="@+id/b0"
                 android:text="@string/b0"
                 android:textColor="#ffffff"
                 android:textSize="32sp"
                 android:layout_width="110dp"
                 android:layout_height="85dp"
                 android:background="@drawable/custombutton2"
                 android:shadowColor="#000"
                 android:shadowDx="-2"
                 android:shadowDy="4"
                 android:shadowRadius="7" />
         <Button android:id="@+id/back"
                 android:text="@string/back"
                 android:textColor="#ffffff"
                 android:textSize="32sp"
                 android:layout_width="110dp"
                 android:layout_height="85dp"
                 android:background="@drawable/custombutton2"
                 android:shadowColor="#000"
                 android:shadowDx="-2"
                 android:shadowDy="4"
                 android:shadowRadius="7" />
     </GridLayout>

    <TextView
        android:id="@+id/footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="150dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/footer"
        android:textColor="#ffffff"
        android:textSize="15sp" />

     <TextView
         android:id="@+id/messageredeem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/imageView1"
         android:layout_centerHorizontal="true"
         android:gravity="center"
         android:text="@string/messageredeem"
         android:textColor="#ffffff"
         android:textSize="40sp"
         android:layout_marginTop="25dp"
         android:layout_marginBottom="20dp"
         android:shadowColor="#000"
         android:shadowDx="-2"
         android:shadowDy="4"
         android:shadowRadius="7" />

      <TableRow 
          android:layout_width="fill_parent"
          android:layout_above="@+id/number"
          android:layout_height="wrap_content" 
          android:layout_centerHorizontal="true"
          android:gravity="center">
         
     <EditText
         android:id="@+id/edit_messageredeem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="7"
         android:inputType="number"
         android:digits="0123456789-"
         android:maxLength="11"
         android:textColor="#ffffff"
         android:textSize="36sp"
         android:imeOptions="actionSend"
         android:background="@drawable/btn"
         android:paddingLeft="8dp"
         android:paddingRight="7dp"
         android:cursorVisible="false"
         android:enabled="false" />
         
     <Button
         android:id="@+id/buttonenter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/custombuttonenter"
         android:text="@string/button_enter"
         android:textColor="#ffffff"
         android:textSize="32sp"
         android:shadowColor="#000"
         android:shadowDx="-2"
         android:shadowDy="4"
         android:shadowRadius="7" />

     

     </TableRow>

      <ProgressBar
          android:id="@+id/ProgressBar1"
          android:layout_width="wrap_content"
          android:layout_height="90dp"
          android:layout_alignBottom="@+id/imageView2"
          android:layout_centerHorizontal="true"
          android:layout_marginBottom="60dp" />

      <ImageView
          android:id="@+id/imageView2"
          android:layout_width="186dp"
          android:layout_height="186dp"
          android:layout_alignParentTop="true"
          android:layout_centerHorizontal="true"
          android:layout_marginTop="63dp"
          android:adjustViewBounds="true"
          android:contentDescription="@string/banner_alt"
          android:scaleType="fitCenter" />

</RelativeLayout>