<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backimage" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:contentDescription="@string/banner_alt"
        android:gravity="top"
        android:src="@drawable/top_base" />

    <TextView
        android:id="@+id/messagetimecheckin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/messagetimecheckin"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/messagetimecheckin1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/messagetimecheckin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/messagetimecheckin1"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/buttonreturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/messagetimecheckin1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="76dp"
        android:background="@drawable/custombutton"
        android:text="@string/button_return"
        android:textColor="#ffffff"
        android:textSize="14sp"
        android:paddingBottom="5dp" />

    <TextView
        android:id="@+id/footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="150dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/footer"
        android:textColor="#ffffff"
        android:textSize="15sp" />

</RelativeLayout>
