<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backimage"
    android:gravity="top"
    android:id="@+id/relative"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:contentDescription="@string/banner_alt"
        android:gravity="top"
        android:src="@drawable/top_base" />

    <TextView
        android:id="@+id/start1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/start"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/start1"
        android:textColor="#ffffff"
        android:textSize="30sp" 
        android:shadowColor="#000"
        android:shadowDx="-2"
        android:shadowDy="4"
        android:shadowRadius="7"/>

    <TextView
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:gravity="center"
        android:text="@string/start"
        android:textColor="#ffffff"
        android:textSize="48sp"
        android:shadowColor="#000"
        android:shadowDx="-2"
        android:shadowDy="4"
        android:shadowRadius="7" />

    <TextView
        android:id="@+id/footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="150dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/footer"
        android:textColor="#ffffff"
        android:textSize="15sp" />

    <Button
        android:id="@+id/getstarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/footer"
        android:layout_centerHorizontal="true"
        android:background="@drawable/custombutton"
        android:paddingBottom="12dp"
        android:paddingRight="6dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:text="@string/getstarted"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:shadowColor="#000"
        android:shadowDx="-2"
        android:shadowDy="4"
        android:shadowRadius="7" />

    <TextView
        android:id="@+id/start3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/start2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/start3"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:shadowColor="#000"
        android:shadowDx="-2"
        android:shadowDy="4"
        android:shadowRadius="7" />

    <TextView
        android:id="@+id/start2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/start1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:gravity="center"
        android:text="@string/start2"
        android:textColor="#ffffff"
        android:textSize="48sp"
        android:shadowColor="#000"
        android:shadowDx="-2"
        android:shadowDy="4"
        android:shadowRadius="7" />
    
    <ProgressBar
          android:id="@+id/ProgressBar1"
          android:layout_width="wrap_content"
          android:layout_height="90dp"
          android:layout_alignBottom="@+id/imageView2"
          android:layout_centerHorizontal="true"
          android:layout_marginBottom="31dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="186dp"
        android:layout_height="186dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="63dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/banner_alt"
        android:scaleType="fitCenter" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:id="@+id/imageViewForExit"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
         />

</RelativeLayout>